# erdos-gyarfas-min-degree-3

./: .gitignore  README.md  erdos-gyarfas-salvage.md  pyproject.toml
erdos_gyarfas/: __init__.py
erdos_gyarfas/experiments/: modal_frontier.py  modal_sms.py  results.md  run_frontier.py  sms_results.md  verification.md
erdos_gyarfas/ground_truth/: nauty.py  reference.py
erdos_gyarfas/sat/: base.py  cegar.py  detector.py  encoding.py  enumerate.py  structural.py  verify.py
paper/: SUBMISSION.md  cover-letter.md  cover-letter.tex  coverletter.md  erdos-gyarfas-sms.tex  literature-verdict.md
tests/: test_base_validation.py  test_bound_gate.py  test_certificate.py  test_cross_check_n10.py  test_reified_counter.py
